@@ -19,7 +19,7 @@
  * Cybernetics Oriented Programming (CYBOP) <http://www.cybop.org>
  * Christian Heller <christian.heller@tuxtax.de>
  *
- * @version $RCSfile: compound_handler.c,v $ $Revision: 1.30 $ $Date: 2009-01-24 22:46:10 $ $Author: christian $
+ * @version $RCSfile: compound_handler.c,v $ $Revision: 1.31 $ $Date: 2009-01-25 11:46:48 $ $Author: christian $
  * @author Christian Heller <christian.heller@tuxtax.de>
  */
 
@@ -213,9 +213,7 @@ void handle_compound(void* p0, void* p1, void* p2, void* p3, void* p4, void* p5,
         // The loop variable.
         int j = *NUMBER_0_INTEGER_MEMORY_MODEL;
 
-/*??
     fwprintf(stdout, L"TEST handle compound sc: %i\n", *sc);
-*/
 
         while (*NUMBER_1_INTEGER_MEMORY_MODEL) {
 
